# mockwise2

./: .gitignore  CLAUDE.md  README.md  TECHNICAL.md  pyproject.toml  requirements.txt  testcase.xlsx
Plugins/: customer regis.json
src/: inserter.py  main.py  models.py  plugin_loader.py  reader.py  screen_matcher.py  ui.py
tests/: conftest.py  test_inserter.py  test_plugin_loader.py  test_reader.py
