[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mockwise2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "pyautogui>=0.9",
    "opencv-python>=4.9",
    "Pillow>=10.0",
    "pyperclip>=1.8",
    "numpy>=2.0",
]

[project.scripts]
mockwise2 = "main:main"
